resources/scss/_layout.scss
/**
 * Article Wiki; page layout.
 * 
 * All layout is for Day theme; other themes are modified 
 * in _themes.scss. As far as possible, all CSS will inherit 
 * or modify the figures set in #page.
 *
 */

* {
    line-height: 150%;
}

html {
    font-family: $fontFamilySerif;
    font-size: $fontSize;
    line-height: 150%;
    color: #222;
    background-color: #A0b8A0;
}

#page, #editor  {
    background-color: #f8f8f8;
}

body {
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-image: none;  /* see common.js */
}

a, button {
    border: none;
    background: none;
}

article {
    margin-top: 4rem;
}

summary {
    margin: 0 0 1rem 0;
    padding: 0;
    font-style: italic;
    font-size: 1.2rem;
}

form {
    margin-bottom: 0;
}

.no-overflow {
    overflow: hidden;
}

@media screen {

    body { 
        padding: 0;
        margin: 0;
    }

    #editor {

        overflow: hidden;
        height: 100vh;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
        grid-template-rows: 2rem auto;
        grid-gap: 0;

        a.button, button {
            text-wrap: none;
            vertical-align: middle;

            i { display: inline; }
            span { display: inline; }
        }

        textarea {
            grid-area: unquote("2 / 1 / 3 / 5");
            padding: 1rem;
            border: none;
            outline: none;
            background: inherit;
        }

        main {
            grid-area: unquote("2 / 5 / 3 / 9");
            padding: 2rem;
            overflow: auto;
            article {
                margin-top: 0;
            }
            .no-preview {
                display: none;
            }
            section.depth-1 {
                margin-top: 0;
                h1 {
                    margin-top: 0;
                }
            }
        }

    }

    #page { 
        width: 56rem;
        max-width: 90%;
        margin: 2rem auto;
        padding: 0;
    }

}


@media print {

    html {
        font-size: 10pt;
    }

    body {
        margin: 3em;
        padding: 0;
    }

    .no-print {
        display: none;
    }

    #editor {
        display: block;

        button, a.button, textarea {
            display: none;
        }

        main {
            width: auto;
            margin: 0;
            padding: 0;
        }
    }

    #page {
        background-color: white;
        width: auto;
        margin: 0;
        padding: 0;
    }

    div.wiki {
        width: auto;
        margin: 0;
        padding: 0;
    }

    var {
        border: 2px solid black;
        color: black;
    }
}

.wiki-error {
    color: red;
}
 
.wiki-no-select {
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
  user-select: none;          /* Likely future */      
}

h2 + table.table-of-contents {
    margin-top: 0;
}

td.word-count { 
    text-align: right;
    font-size: $fontSizeMinus2;
}

header {
    text-align: center;
    margin-top: 3rem;
    margin-bottom: 3rem;
}

header summary {
    font-size: $fontSizePlus1;
    margin-bottom: 2rem;
}

header address {
    display: inline-block;
    margin: .3rem;
    font-style: normal;
}

section {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

section.depth-1 {
    margin-top: 4rem;
}

section.depth-2 {
    margin-top: 3rem;
}

section.depth-3 {
    margin-top: 2rem;
}

.wiki-demo {
    overflow-y: hidden;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 1em;

    .wiki-demo-source {
        border-right: .1rem dotted black;
        padding-right: 2rem;

        pre {
            padding: 0;
        }
    }
    .wiki-demo-output {
        padding-left: 1rem;
        article {
            margin: 0;
        }
    }
}

.wiki-demo-wide {
    overflow-y: hidden;
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 0;

    .wiki-demo-source {
        padding-left: 0;
        padding-right: 0;
    }
    .wiki-demo-output {
        border-left: 0.1rem dotted black;
        padding-left: 2.4rem;
        padding-right: 0;
        article {
            margin: 0;
        }
    }
}

.wiki-demo-output section.depth-1,
.wiki-demo-output section.depth-2,
.wiki-demo-output section.depth-3 {
    margin-top: 1rem;
}

.wiki-demo table {
    min-width: 20em;
}

.no-column-break {
    -webkit-column-break-inside: avoid; /* Chrome, Safari */
    page-break-inside: avoid;           /* Theoretically FF 20+ */
    break-inside: avoid-column;         /* IE 11 */
    display:table;                      /* Actually FF 20+ */
}

h1 + summary {
    margin-top: none;
}

section.depth-1 h1, header h1 {
    font-size: $fontSizePlus3;
}

section.depth-2 h1 {
    font-size: $fontSizePlus2;
}

section.depth-3 h1 {
    font-size: $fontSizePlus1;
}

section.depth-4 h1,
footer h1 {
    font-size: $fontSize
}

section.depth-5 h1 {
    font-size: $fontSizeMinus1;
}

section.depth-6 h1 {
    font-size: $fontSizeMinus1;
}

footer {
    font-size: $fontSizeMinus1;
}


/*
 * LOGIN BOX
 *
 */

#login {
    margin: 0 auto;
    width: 15em;

    input {
        width: 100%;
        font-family: $fontFamilySansSerif;
        font-size: $fontSizePlus1;
        border: 1px solid rgba(128, 128, 128, 0.5);
        background: none;
        color: inherit;
        border-radius: $borderRadius;
        padding: 0.3rem 0.6rem;
        cursor: pointer;
    }
}

/*
 * SIDE BAR
 *
 */

#progress {
    font-family: $fontFamilySansSerif
}

.side-nav { 
    position: fixed;
    text-decoration: none;
    font-size: $fontSizeMinus1;
    padding: 1em;
    opacity: 0.4;
}

.bottom-menu {
    bottom: 0;
    right: 0;
}

/*
 * Back-to-the-top button.
 *
 */

.top-of-page {
    text-align: center;
    margin-bottom: 6rem;
    opacity: .5;
    
    a, a:hover, a:active, a:visited {
        color: #a0b8a0;
        border-bottom: none;
        opacity: 0.5;
    }
}

/**
 * Articles list for home and user pages.
 * Consider CSS Masonry/Flexboxy instead. 
 */

.article-list {
    margin: 1.5em 0;
    padding: 0;
    display: grid;
    grid-template-columns: 45% 45%;
    grid-gap: 10%;
}
.article {
    display: inline-block;
    padding: 1rem 0;
    width: 100%;
    box-sizing: border-box;
    text-align: center;
}
.article-title {
    font-size: $fontSize;
    font-style: bold;
}
.article-summary {
    margin-bottom: 1rem;
    font-size: $fontSizeMinus1;
}
.article-details {
    margin-top: .5em;
    font-size: $fontSizeMinus1;
}


/* CSS Modal notice if no grid support. */

.modal {

    display: none;

    .modal-cover {
        z-index: 1000;
        position: fixed;
        top: 0;
        left: 0;
        background-color: #000;
        width: 100vw;
        height: 100vh;
        opacity: 0.5;
    }

    .modal-message {
        position: fixed;
        z-index: 1001;
        top: 2em;
        left: 2em;
        border-radius: $borderRadius;
        box-shadow: 1rem 1rem 2rem #444;
        text-align: center;
        background-color: #fff;
        width: 18em;
        max-width: 90%;
        padding: 2rem;

        h2 {
            font-weight: bold;
            margin: 0 0 1rem 0;
        }

        .modal-button {
            margin: 2rem 0 1rem 0;
        }
    }

}

@supports not (display: grid) {
    .modal {
        display: block;
    }
}

